--- a/index.html
+++ b/index.html
@@ -104,26 +104,67 @@
     <div class="col-md-4 mb-4 text-center">
       <div class="card-3d p-3 bg-white rounded shadow">
         <img src="t.jpg" alt="Client One" class="rounded-circle mx-auto" style="width:120px;height:120px;object-fit:cover;">
+         <!-- Star Rating -->
+         <div class="mt-3 mb-2">
+          <i class="fas fa-star text-warning"></i>
+          <i class="fas fa-star text-warning"></i>
+          <i class="fas fa-star text-warning"></i>
+          <i class="fas fa-star text-warning"></i>
+          <i class="fas fa-star text-warning"></i>
+        </div>
         <p class="mt-3"><em>"Kris Tech is the best company we've ever worked with. They helped us a lot by professionally installing CCTV cameras at our workplace. Their team was efficient, reliable, and the installation was very neat. Now we feel more secure,
            and we highly recommend Kris Tech for anyone looking for quality tech services!"</em></p>
         <p><strong>- Mr. Mc Donald Mlenga -</strong></p>
+         <!-- Satisfaction Progress Bar -->
+    <div class="progress" style="height: 8px; background-color: #f1f1f1;">
+      <div class="progress-bar bg-warning" style="width: 100%;"></div>
+    </div>
+    <small class="text-muted mt-1 d-block">Customer Satisfaction: 100%</small>
       </div>
     </div>
 
     <div class="col-md-4 mb-4 text-center">
       <div class="card-3d p-3 bg-white rounded shadow">
         <img src="q.jpg" alt="Client One" class="rounded-circle mx-auto" style="width:120px;height:120px;object-fit:cover;">
+          <!-- Star Rating -->
+          <div class="mt-3 mb-2">
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+          </div>
         <p class="mt-3"><em>"l am Vertices Precious Pearson from blossom media, Kris Tech exceeded our expectations by passionately helped our business with their eunique in websited designing and development ."</em></p>
         <p><strong>- Mr. Vertices precious pearson -</strong></p>
+         <!-- Satisfaction Progress Bar -->
+    <div class="progress" style="height: 8px; background-color: #f1f1f1;">
+      <div class="progress-bar bg-warning" style="width: 100%;"></div>
+    </div>
+    <small class="text-muted mt-1 d-block">Customer Satisfaction: 100%</small>
       </div>
     </div>
 
     <div class="col-md-4 mb-4 text-center">
       <div class="card-3d p-3 bg-white rounded shadow">
         <img src="j.jpg" alt="Client One" class="rounded-circle mx-auto" style="width:120px;height:120px;object-fit:cover;">
+          <!-- Star Rating -->
+          <div class="mt-3 mb-2">
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+          </div>
         <p class="mt-3"><em>"my name is Juve Obed from KB printers Kris Tech has been a game-changer for our business with their excellent stationery services. From branded notebooks to professional letterheads and business cards, everything was delivered on time and with top quality.
            Their attention to detail and creativity really made our brand stand out. Highly recommended ."</em></p>
         <p><strong>- Mr. Juve Obed -</strong></p>
+          <!-- Satisfaction Progress Bar -->
+    <div class="progress" style="height: 8px; background-color: #f1f1f1;">
+      <div class="progress-bar bg-warning" style="width: 100%;"></div>
+    </div>
+    <small class="text-muted mt-1 d-block">Customer Satisfaction: 100%</small>
+  </div>
+</div>
       </div>
     </div>
     <!-- Add more testimonials -->
